--- a/src/app/check-in-out/check-in-out.component.scss
+++ b/src/app/check-in-out/check-in-out.component.scss
@@ -29,3 +29,8 @@
   .btn-check {
     border-radius: 30px;
   }
+ /*  .logo {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      
+  } */
