changes in date

--- a/src/app/check-in-out/check-in-out.component.html
+++ b/src/app/check-in-out/check-in-out.component.html
@@ -45,7 +45,7 @@
                                 <label for="nric">NRIC/FIN No.</label>
                             </div>
                             <div class="md-form">
-                                <input type="datetime-local" id="time" class="form-control" mdbInput name="time" [(ngModel)]="attendance.time" required #nric="ngModel">
+                                <input type="text" id="time" class="form-control" mdbInput name="time" [(ngModel)]="attendance.time" required #nric="ngModel">
                                 <!-- <label for="time">Time</label> -->
                             </div>
                             <!-- Default unchecked -->
