--- a/src/app/check-in-out/check-in-out.component.html
+++ b/src/app/check-in-out/check-in-out.component.html
@@ -2,10 +2,10 @@
     <div class="col-sm-12">
         <!--Form with header-->
         <mdb-card>
-            <div class="col-sm-12">
+            <!-- <div class="col-sm-12">
                 <div class="text-center">
                     <img src="/assets/images/STIE-Logo-color.png" class="logo py-3" width="40%" height="140px"></div>
-            </div>
+            </div> -->
             <!--Header-->
             <div class="header py-1 " style="background-color: #e2e2e2;">
                 <div class="row">
