--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm-12">
+        <!-- <div class="col-sm-12">
             <div class="text-center">
                 <img src="/assets/images/STIE-Logo-color.png" class="logo py-3" width="40%" height="140px"></div>
-        </div>
+        </div> -->
         <div class="col-sm-12">
             <div class="container">
                 <div class="row">
