--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="container">
   <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" 
   type = "line-scale-party" [fullScreen] = "true">
-  <p style="color: white" 
-  > Loading... </p>
+  <!-- <p style="color: white" 
+  > Loading... </p> -->
 </ngx-spinner>
+  <app-header></app-header>
     <router-outlet></router-outlet>
 </div>
