some little changes

--- a/src/app/check-in-out/check-in-out.component.html
+++ b/src/app/check-in-out/check-in-out.component.html
@@ -35,7 +35,7 @@
                             </div>
                             <!-- Default checked -->
                             <div class="custom-control custom-radio">
-                                <input type="radio" class="custom-control-input" id="CheckIn" value="checkIn" name="check" checked mdbInput>
+                                <input type="radio" class="custom-control-input" id="CheckIn" value="checkIn" name="check" [(ngModel)]="attendance.check" checked mdbInput>
                                 <label class="custom-control-label" for="CheckIn">Check-In</label>
                             </div>
                         </div>
