--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,9 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="text-center">
-                    <img src="/assets/images/STIE-Logo-color.png" class="logo py-3" width="40%" height="140px"></div>
+                    <img src="/assets/images/STIE-Logo-color.png" class="logo py-3" width="40%" height="140px">
+                    <!-- <img src="/assets/images/attendance2.jpg" class="logo py-3" width="40%" height="140px"> -->
+                </div>
             </div>
         </div>
     </div>
@@ -16,6 +18,10 @@
 <!-- dropdown menu for user account -->
 <mat-menu #userMenu="matMenu" >
     <!-- *ngIf="role=='Admin'" -->
+    <button mat-menu-item routerLink="/login">
+        <mat-icon style="color: #ebe3e3;">login</mat-icon>
+        <span>Login</span>
+    </button>
     <button mat-menu-item routerLink="/attendance" *ngIf="getUrl()=='search'">
         <mat-icon style="color: #ebe3e3;">home</mat-icon>
         <span>Home</span>
